<resources>
    <string name="app_name" translatable="false">Movie Searcher</string>
    <string name="enter_your_api_key">Enter your api_key:</string>
    <string name="enter_your_name">Enter your name:</string>
    <string name="log_in">Log in</string>
    <string name="movie_name_test" translatable="false">The Lord of the Rings: The Fellowship of the Ring (2001)</string>
    <string name="about_the_film">О фильме</string>
    <string name="countries">Страны</string>
    <string name="genres">Жанры</string>
    <string name="slogan">Слоган</string>
    <string name="description">Описание</string>
    <string name="posters">Постеры</string>
    <string name="reviews">Отзывы</string>
    <string name="actors">Актеры</string>
    <string name="choose_filters">Выберите фильтры</string>
    <string name="content_type">Тип контента</string>
    <string name="years">Годы выхода</string>
    <string name="rating">Рейтинг</string>
    <string name="input_value">Введите значение:</string>
    <string name="network">Сеть производства</string>
    <string name="from">С</string>
    <string name="until">До</string>
    <string name="apply">Применить</string>
    <string name="reset_filters">Сбросить фильтры</string>
    <string name="actor_movies">Фильмография</string>
    <string name="actor_career">Карьера</string>
    <string name="date_of_death">Дата смерти</string>
    <string name="actor_birth_place">Место Рождения</string>
    <string name="actor_birthday">Дата рождения</string>
    <string name="actor_about">О персоне</string>
    <string name="actor_growth">Рост</string>
    <string name="remove_from_bookmark">Удалить из избранного</string>
    <string name="add_to_bookmark">Добавить в избранное</string>
    <string name="season_list">Список сезонов</string>
    <string-array name="countries">
        <item>Выберите страну</item>
        <item>США</item>
        <item>Россия</item>
        <item>Испания</item>
        <item>Франция</item>
        <item>Германия</item>
        <item>Великобритания</item>
        <item>Индия</item>
        <item>Турция</item>
        <item>Южная Корея</item>
        <item>Китай</item>
        <item>Япония</item>
        <item>Нидерланды</item>
        <item>Казахстан</item>
    </string-array>
    <string-array name="network">
        <item>Выберите сеть</item>
        <item>Netflix</item>
        <item>HBO</item>
        <item>Amazon</item>
        <item>YouTube Premium</item>
    </string-array>
    <string-array name="genres">
        <item>Выберите жанр</item>
        <item>Драма</item>
        <item>Фантастика</item>
        <item>Приключения</item>
        <item>Фэнтези</item>
        <item>Комедия</item>
        <item>Триллер</item>
        <item>Ужасы</item>
        <item>Мелодрама</item>
    </string-array>
    <string-array name="content_types">
        <item>Выберите тип</item>
        <item>Фильм</item>
        <item>Сериал</item>
        <item>Аниме</item>
        <item>Мультфильм</item>
        <item>Анимационный сериал</item>
    </string-array>
</resources>